src/objects/Related_Request__c.object
<CustomObject>
    <description>TOOLKIT</description>
    <fields>
        <fullName>Converted_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Question_Log__c</fullName>
        <label>Question Log</label>
        <referenceTo>Question_Log__c</referenceTo>
        <relationshipLabel>Related Requests</relationshipLabel>
        <relationshipName>Related_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Related Requests</relationshipLabel>
        <relationshipName>Related_Requests</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Related Request</label>
    <nameField>
        <displayFormat>RR-{000000}</displayFormat>
        <label>Related Request Numbers</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>